welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:1: error: type mismatch;
 found   : Unit
 required: Int
def max2Value(nums:Array[Int]): Int = {
                                      ^